<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleDetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Judul" />

    <TextView
        android:id="@+id/descdetailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Deksripsi" />

    <Button
        android:id="@+id/deleteNoteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hapus" />

    <Button
        android:id="@+id/editNoteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit" />
</LinearLayout>